--- a/项目执行框架.ipynb
+++ b/项目执行框架.ipynb
@@ -25,7 +25,8 @@
     "* 定位DQS哪里可以引入AQS\n",
     "* 仍需要DQS有哪里是可以简化、优化的，比如对费米子哈密顿量的转换方法--**JW/BK变换**\n",
     "* 怎么体现在SC平台上的实现，考虑对象是Digital/Analog block\n",
-    "* *DQS for molecular vibration*有点“小厂”了，尽可能还是找Nature，PRL，IEEE"
+    "* *DQS for molecular vibration*因为发布在Royal Society of Chmistry,有点“小厂”了;\n
+    不否决对其尝试复现；但如果复现碰壁或收益低，尽可能还是从Nature，PRL，IEEE找benchmark articles"
    ]
   },
   {
