--- a/项目执行框架.ipynb
+++ b/项目执行框架.ipynb
@@ -81,7 +81,7 @@
    "source": [
     "### **阶段三：耗散动力学模拟--Qutip**\n",
     "#### 时间：7.26 - 7.29\n",
-    "#### 模拟已经有库，故可以压缩实现时间\n",
+    "#### Qutip已经有用于相应模拟的库，故可以压缩实现时间\n",
     "\n",
     "\n",
     "5. **引入噪声**\n",
